--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="https://drive.google.com/file/d/1s8kl7ZiRdtCeXeOvN7D5iJVyHFWAvxcK/view?usp=drivesdk" class="btn">Download CV</a>
         </div>
         <div class="home-img">
-            <img src="IMG_20220303_232100_120.jpg" alt="">
+            <img src="IMG-20220505-WA0052.jpg" alt="">
         </div>
     </section>
 
