--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="home-content">
             <h1>Henri Caesar Bimantara</h1>
             <h3>And I'm a <span class="multiple-text"></span></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo atque harum qui suscipit sapiente, dolore, animi commodi hic magnam quod officia soluta. Dolorum tempore debitis velit voluptas aut nisi perspiciatis.</p>
+            <p>Saya memiliki pengalaman kerja selama 2 tahun di bidang Warehouse Control dan Staff dan telah mengembangkan kemampuan Microsoft office,forklift,system SAP,ERP dan ceisa selama bekerja di perusahaan sebelumnya. saya juga siap untuk belajar dan mengembangkan diri saya.
             <div class="social-media">
                 <a href="https://github.com/Henricaesar" style="--i:7;"><i class='bx bxl-github'></i></a>
                 <a href="https://id.linkedin.com/in/henri-caesar-bimantara-b78064248" style="--i:8;"><i class='bx bxl-linkedin' ></i></a>
