--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="https://id.linkedin.com/in/henri-caesar-bimantara-b78064248" style="--i:8;"><i class='bx bxl-linkedin' ></i></a>
                 <a href="https://www.instagram.com/henricsbmr/" style="--i:9;"><i class='bx bxl-instagram' ></i></a>
             </div>
-            <a href="https://drive.google.com/file/d/1s8kl7ZiRdtCeXeOvN7D5iJVyHFWAvxcK/view?usp=drivesdk" class="btn">Download CV</a>
+            <a href="https://drive.google.com/file/d/1H_BGM6HHCLgEFRxOOdbZ5ybQ5YiRMd0O/view?usp=sharing" class="btn">Download CV</a>
         </div>
         <div class="home-img">
             <img src="IMG-20220505-WA0052.jpg" alt="">
