--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
         <div class="home-content">
             <h1>Henri Caesar Bimantara</h1>
             <h3>And I'm a <span class="multiple-text"></span></h3>
-            <p>Saya memiliki pengalaman kerja selama 2 tahun di bidang Warehouse Control dan Staff dan telah mengembangkan kemampuan Microsoft office,forklift,system SAP,ERP dan ceisa selama bekerja di perusahaan sebelumnya. saya juga siap untuk belajar dan mengembangkan diri saya.
+            <p>Experienced Warehouse Administrator with a strong track record in managing inventory and logistics operations across diverse industrial settings. Proven ability to streamline warehouse processes using advanced ERP,SAP,CEISA,WMS systems and ensuring compliance with FIFO principles. Skilled in overseeing import material handling, including Good Receive procedures and meticulous labeling for tracking and project management.
             <div class="social-media">
                 <a href="https://github.com/Henricaesar" style="--i:7;"><i class='bx bxl-github'></i></a>
                 <a href="https://id.linkedin.com/in/henri-caesar-bimantara-b78064248" style="--i:8;"><i class='bx bxl-linkedin' ></i></a>
                 <a href="https://www.instagram.com/henricsbmr/" style="--i:9;"><i class='bx bxl-instagram' ></i></a>
             </div>
-            <a href="https://drive.google.com/file/d/1H_BGM6HHCLgEFRxOOdbZ5ybQ5YiRMd0O/view?usp=sharing" class="btn">Download CV</a>
+            <a href="https://drive.google.com/file/d/19YtIMMkswXGiaXrU75GiT3Kbhivj8X9X/view?usp=drive_link" class="btn">Download CV</a>
         </div>
         <div class="home-img">
-            <img src="IMG-20220505-WA0052.jpg" alt="">
+            <img src="https://drive.google.com/file/d/19WNOtYIbSzW-XyVab_HDREG0ThE0R5HU/view?usp=drive_link" alt="">
         </div>
     </section>
 
