--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="https://drive.google.com/file/d/19YtIMMkswXGiaXrU75GiT3Kbhivj8X9X/view?usp=drive_link" class="btn">Download CV</a>
         </div>
         <div class="home-img">
-            <img src="https://drive.google.com/file/d/19WNOtYIbSzW-XyVab_HDREG0ThE0R5HU/view?usp=drive_link" alt="">
+            <img src="20241005_161258.jpg" alt="">
         </div>
     </section>
 
